# hds-public-shell

./: .gitignore  ENGINEERING_POSTURE_REFERENCES.md  LICENSE  README.md  REFERENCES.md  pyproject.toml
src/hds_public_shell/: __init__.py  controller.py  logger.py  main.py  models.py  policy.py
tests/: test_api.py  test_controller.py
