[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hds-public-shell"
version = "0.2.0"
description = "Public-safe F→M→C upstream control shell for HDS-aligned systems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Teppei Ohira" },
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.5",
]

[project.optional-dependencies]
server = [
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[project.scripts]
hds-public-shell = "hds_public_shell.main:run"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
